--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,198 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rgo-FP-iRC">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="339" id="XlY-pF-txb">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="400"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="592" id="iSx-31-sqm">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="648"/>
+                                    </constraint>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="XlY-pF-txb"/>
+                                        <exclude reference="iSx-31-sqm"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="492"/>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="292"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="XlY-pF-txb"/>
+                                        <include reference="iSx-31-sqm"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Tap to add text here" placeholder="Tap to add text here" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="30" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nH3-Iv-FhX" userLabel="Textfield top">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="c4j-w3-wNz"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" keyboardAppearance="alert" returnKeyType="done"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="c4j-w3-wNz"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="c4j-w3-wNz"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="EditMyText:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="y4J-KJ-cyj"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Tap to add text here" placeholder="Tap to add text here" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="30" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cvg-GB-Xne" userLabel="Textfield bottom">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" keyboardAppearance="alert" returnKeyType="done"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Shd-dZ-GCx" userLabel="Toolbar du bas">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="p4t-sr-uYy">
+                                        <connections>
+                                            <action selector="useCamera:" destination="vXZ-lx-hvc" id="65T-YI-vjH"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Album" width="160" id="mna-bS-SmR">
+                                        <connections>
+                                            <action selector="useCameraRoll:" destination="vXZ-lx-hvc" id="PjL-Fc-Iqp"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="x8Q-Yb-2rZ" userLabel="Toolbar du haut">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem title="Share" width="87" id="XtN-Xy-csL"/>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select an image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMP-8X-uPo">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="78" y="389" width="244" height="21"/>
+                                </variation>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nH3-Iv-FhX" firstAttribute="leading" secondItem="cvg-GB-Xne" secondAttribute="leading" id="31d-aJ-Cxc"/>
+                            <constraint firstItem="nH3-Iv-FhX" firstAttribute="leading" secondItem="x8Q-Yb-2rZ" secondAttribute="leading" id="4Wu-u9-Ilu"/>
+                            <constraint firstItem="nH3-Iv-FhX" firstAttribute="trailing" secondItem="x8Q-Yb-2rZ" secondAttribute="trailing" id="4gR-Z7-giY"/>
+                            <constraint firstItem="Shd-dZ-GCx" firstAttribute="trailing" secondItem="x8Q-Yb-2rZ" secondAttribute="trailing" id="Fwj-Jc-FzF"/>
+                            <constraint firstItem="nH3-Iv-FhX" firstAttribute="top" secondItem="x8Q-Yb-2rZ" secondAttribute="bottom" constant="23" id="Isf-xG-Njk"/>
+                            <constraint firstItem="LMP-8X-uPo" firstAttribute="centerX" secondItem="rgo-FP-iRC" secondAttribute="centerX" id="Jdw-u8-boF"/>
+                            <constraint firstItem="x8Q-Yb-2rZ" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="Mq9-FA-xsC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rgo-FP-iRC" secondAttribute="trailing" constant="-23" id="NGs-IG-H4N">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstAttribute="trailing" secondItem="Shd-dZ-GCx" secondAttribute="trailing" id="R1O-44-rNN"/>
+                            <constraint firstItem="Shd-dZ-GCx" firstAttribute="top" secondItem="cvg-GB-Xne" secondAttribute="bottom" constant="19" id="S2r-hX-1NG"/>
+                            <constraint firstItem="LMP-8X-uPo" firstAttribute="centerY" secondItem="rgo-FP-iRC" secondAttribute="centerY" constant="11.5" id="SK5-Wf-IgO"/>
+                            <constraint firstItem="Shd-dZ-GCx" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="V1I-uJ-295"/>
+                            <constraint firstItem="rgo-FP-iRC" firstAttribute="leading" secondItem="Shd-dZ-GCx" secondAttribute="leading" id="aTZ-92-hzn"/>
+                            <constraint firstItem="nH3-Iv-FhX" firstAttribute="trailing" secondItem="cvg-GB-Xne" secondAttribute="trailing" id="dcx-TD-lfx"/>
+                            <constraint firstItem="rgo-FP-iRC" firstAttribute="leading" secondItem="x8Q-Yb-2rZ" secondAttribute="leading" id="hQS-8T-bfw"/>
+                            <constraint firstAttribute="centerY" secondItem="rgo-FP-iRC" secondAttribute="centerY" constant="27" id="isr-eG-pyP">
+                                <variation key="heightClass=regular-widthClass=compact" constant="12"/>
+                            </constraint>
+                            <constraint firstItem="Shd-dZ-GCx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="v4h-EN-xMF"/>
+                            <constraint firstAttribute="centerX" secondItem="rgo-FP-iRC" secondAttribute="centerX" constant="14.5" id="znj-Xk-15y">
+                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                            </constraint>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="rgo-FP-iRC"/>
+                                <exclude reference="nH3-Iv-FhX"/>
+                                <exclude reference="cvg-GB-Xne"/>
+                                <exclude reference="Shd-dZ-GCx"/>
+                                <exclude reference="x8Q-Yb-2rZ"/>
+                                <exclude reference="LMP-8X-uPo"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Mq9-FA-xsC"/>
+                                <exclude reference="NGs-IG-H4N"/>
+                                <exclude reference="aTZ-92-hzn"/>
+                                <exclude reference="hQS-8T-bfw"/>
+                                <exclude reference="isr-eG-pyP"/>
+                                <exclude reference="znj-Xk-15y"/>
+                                <exclude reference="31d-aJ-Cxc"/>
+                                <exclude reference="4Wu-u9-Ilu"/>
+                                <exclude reference="4gR-Z7-giY"/>
+                                <exclude reference="Isf-xG-Njk"/>
+                                <exclude reference="dcx-TD-lfx"/>
+                                <exclude reference="Jdw-u8-boF"/>
+                                <exclude reference="SK5-Wf-IgO"/>
+                                <exclude reference="Fwj-Jc-FzF"/>
+                                <exclude reference="R1O-44-rNN"/>
+                                <exclude reference="S2r-hX-1NG"/>
+                                <exclude reference="V1I-uJ-295"/>
+                                <exclude reference="v4h-EN-xMF"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="rgo-FP-iRC"/>
+                                <include reference="Shd-dZ-GCx"/>
+                                <include reference="x8Q-Yb-2rZ"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="nH3-Iv-FhX"/>
+                                <include reference="cvg-GB-Xne"/>
+                                <include reference="LMP-8X-uPo"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="Mq9-FA-xsC"/>
+                                <include reference="NGs-IG-H4N"/>
+                                <include reference="aTZ-92-hzn"/>
+                                <include reference="hQS-8T-bfw"/>
+                                <include reference="isr-eG-pyP"/>
+                                <include reference="znj-Xk-15y"/>
+                                <include reference="31d-aJ-Cxc"/>
+                                <include reference="4Wu-u9-Ilu"/>
+                                <include reference="4gR-Z7-giY"/>
+                                <include reference="Isf-xG-Njk"/>
+                                <include reference="dcx-TD-lfx"/>
+                                <include reference="Jdw-u8-boF"/>
+                                <include reference="SK5-Wf-IgO"/>
+                                <include reference="Fwj-Jc-FzF"/>
+                                <include reference="R1O-44-rNN"/>
+                                <include reference="S2r-hX-1NG"/>
+                                <include reference="V1I-uJ-295"/>
+                                <include reference="v4h-EN-xMF"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="bottom_text" destination="cvg-GB-Xne" id="gFk-CG-9Jd"/>
+                        <outlet property="imageView" destination="rgo-FP-iRC" id="Ha7-sW-8wv"/>
+                        <outlet property="top_text" destination="nH3-Iv-FhX" id="Lj7-Yc-tSp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="294" y="438"/>
         </scene>
     </scenes>
 </document>
