--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="vXZ-lx-hvc" customClass="ViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -40,8 +40,7 @@
                                 <variation key="heightClass=compact-widthClass=compact" ambiguous="YES" misplaced="YES">
                                     <rect key="frame" x="0.0" y="64" width="400" height="292"/>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="64" width="400" height="692"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="XlY-pF-txb"/>
                                         <include reference="iSx-31-sqm"/>
@@ -127,7 +126,11 @@
                                             <action selector="shareit:" destination="vXZ-lx-hvc" id="1qg-17-OtA"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="My memes" width="354" id="BwS-vv-3Mk"/>
+                                    <barButtonItem title="My memes" width="354" id="BwS-vv-3Mk">
+                                        <connections>
+                                            <segue destination="x69-La-acL" kind="show" id="B9u-Ym-55I"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                                 <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
@@ -251,6 +254,7 @@
                         <outlet property="bottombar" destination="Shd-dZ-GCx" id="Xfb-js-3qW"/>
                         <outlet property="flecheimg" destination="uZM-eO-U4b" id="Scc-g7-OJW"/>
                         <outlet property="imageView" destination="rgo-FP-iRC" id="Ha7-sW-8wv"/>
+                        <outlet property="sharebutton" destination="XtN-Xy-csL" id="Fbf-DH-EqA"/>
                         <outlet property="top_text" destination="nH3-Iv-FhX" id="Lj7-Yc-tSp"/>
                         <outlet property="topbar" destination="Shd-dZ-GCx" id="rQS-e4-Vz7"/>
                     </connections>
@@ -259,8 +263,165 @@
             </objects>
             <point key="canvasLocation" x="294" y="438"/>
         </scene>
+        <!--Sent Memes-->
+        <scene sceneID="kW2-7X-ijU">
+            <objects>
+                <tableViewController storyboardIdentifier="SentMemesVC" id="Cuh-Pc-5eG" userLabel="Sent Memes" customClass="SentMemesVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="erv-9R-R7D">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Zup-Yz-4UQ">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zup-Yz-4UQ" id="n26-P3-Ofu">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Cuh-Pc-5eG" id="dcQ-AM-v8I"/>
+                            <outlet property="delegate" destination="Cuh-Pc-5eG" id="1uM-ew-CwL"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="My Memes" id="O1K-hf-V5w" userLabel="Sent Memes">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FH2-8M-1X1">
+                            <connections>
+                                <action selector="createNewMemes:" destination="Cuh-Pc-5eG" id="5zc-JW-P8y"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ic8-g6-Gyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2935.5" y="-11.25"/>
+        </scene>
+        <!--Meme Details VC-->
+        <scene sceneID="U2d-pe-e1c">
+            <objects>
+                <viewController id="4pJ-0d-S55" userLabel="Meme Details VC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1EJ-Rg-Vvl"/>
+                        <viewControllerLayoutGuide type="bottom" id="2cy-yZ-AOe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Aa5-YF-YZd">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="im8-mf-D4v">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="20" width="400" height="780"/>
+                                </variation>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="im8-mf-D4v"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="im8-mf-D4v"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C2P-zb-Tff" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3708" y="27"/>
+        </scene>
+        <!--Table-->
+        <scene sceneID="PqU-UA-YiZ">
+            <objects>
+                <navigationController id="xPL-VH-A5B" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Table" image="table" id="8c1-du-XCq"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ey7-vD-Gnk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Cuh-Pc-5eG" kind="relationship" relationship="rootViewController" id="Dq8-Ub-gUS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kSv-Nf-8q8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1995" y="-11.25"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="TYc-dN-GiD">
+            <objects>
+                <tabBarController id="x69-La-acL" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="a9q-pf-PME">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="xPL-VH-A5B" kind="relationship" relationship="viewControllers" id="DPY-cD-Bo0"/>
+                        <segue destination="thh-4Q-qf8" kind="relationship" relationship="viewControllers" id="CxY-pF-Dbp"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C4n-uF-rW3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1168.5" y="444"/>
+        </scene>
+        <!--Sent Memes-->
+        <scene sceneID="1JX-9p-eEh">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wDN-Wm-TQg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="chb-Cr-ae1">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Tk8-ve-Dvb">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <cells>
+                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NRh-mJ-xli">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </collectionViewCell>
+                    </cells>
+                </collectionView>
+                <tableViewController id="iZ5-vR-rMF" userLabel="Sent Memes" customClass="MemesCollection" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="My Memes" id="fDJ-8N-x3u" userLabel="Sent Memes">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mwO-r0-zSC"/>
+                    </navigationItem>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="2977.5" y="868.5"/>
+        </scene>
+        <!--collection-->
+        <scene sceneID="QAt-cx-cxJ">
+            <objects>
+                <navigationController id="thh-4Q-qf8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="collection" image="collection" id="HsD-xq-dVA" userLabel="Collections"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z7h-Ey-EY3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="iZ5-vR-rMF" kind="relationship" relationship="rootViewController" id="aci-Qb-9uc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="avU-ob-mbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2047.5" y="868.5"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="collection" width="30" height="30"/>
         <image name="fleche" width="180" height="240"/>
+        <image name="table" width="30" height="30"/>
     </resources>
 </document>
