check camera and change entry point

--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -254,6 +254,7 @@
                         <outlet property="TextInstruction" destination="LMP-8X-uPo" id="ZZC-BO-Uk6"/>
                         <outlet property="bottom_text" destination="cvg-GB-Xne" id="gFk-CG-9Jd"/>
                         <outlet property="bottombar" destination="Shd-dZ-GCx" id="Xfb-js-3qW"/>
+                        <outlet property="camera" destination="p4t-sr-uYy" id="h3g-eM-dlp"/>
                         <outlet property="flecheimg" destination="uZM-eO-U4b" id="Scc-g7-OJW"/>
                         <outlet property="imageView" destination="rgo-FP-iRC" id="Ha7-sW-8wv"/>
                         <outlet property="sharebutton" destination="XtN-Xy-csL" id="Fbf-DH-EqA"/>
